--- a/index.html
+++ b/index.html
@@ -478,6 +478,13 @@
             }
         });
     </script>
+    <script>
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("service-worker.js");
+}
+</script>
+
 </body>
 
 </html>
+
